fix check-style and tests